--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
+  padding: 75px;
   text-align: center;
+  background-color: #000;
 }
 
 .App-logo {
@@ -13,18 +15,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  cursor: pointer;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -32,15 +22,4 @@
   to {
     transform: rotate(360deg);
   }
-}
-
-.texto1, .texto2 , .parrafo, .boton, .pie{
-  font-weight: bold;
-  color:#61dafb;
-}
-
-.boton:hover{
-  background-color:#000;
-  font-weight: bold;
-  cursor: pointer;
 }
