--- a/src/Style/Button.css
+++ b/src/Style/Button.css
@@ -1,11 +1,14 @@
 .boton {
   color:#61dafb;
-  background-color:#000;
+  font-size: 20px;
+  background-color:	#f4eeee;
+  font-weight: bold;
+  border-radius: 50px;
 }
 
 .boton:hover {
   color:#61dafb;
-  background-color:#FFF;
+  background-color:#000;
   font-weight: bold;
   cursor: pointer;
 }
